erDiagram
  BARANGAYS ||--o{ BARANGAY_SITIOS : contains
  BARANGAY_SITIOS ||--o{ MOTHER_LEADER_SITIO_ASSIGNMENTS : scopes
  USERS ||--o{ MOTHER_LEADER_SITIO_ASSIGNMENTS : assigned
  BARANGAYS ||--o{ PROFILING_CYCLES : runs
  PROFILING_PRIVACY_NOTICES ||--o{ PROFILING_CYCLES : governs
  PROFILING_CYCLES ||--o{ PROFILING_SAMPLE_UNITS : samples
  PROFILING_SAMPLE_UNITS ||--o| PROFILING_HOUSEHOLDS : resolves_to
  PROFILING_HOUSEHOLDS ||--o{ PROFILING_SUBMISSIONS : versions
  PROFILING_SUBMISSIONS ||--o{ PROFILING_RESIDENT_VERSIONS : contains
  PROFILING_RESIDENTS ||--o{ PROFILING_RESIDENT_VERSIONS : versions
  PROFILING_HOUSEHOLDS ||--o{ PROFILING_HOUSEHOLD_MEMBERSHIPS : has
  PROFILING_RESIDENTS ||--o{ PROFILING_HOUSEHOLD_MEMBERSHIPS : belongs_to
  PROFILING_SUBMISSIONS ||--o{ PROFILING_CONSENTS : authorizes
  PROFILING_CYCLES ||--o{ PROFILING_IMPORT_BATCHES : imports
  PROFILING_IMPORT_BATCHES ||--o{ PROFILING_IMPORT_ROWS : stages
  PROFILING_CYCLES ||--o{ PROFILING_DUPLICATE_CANDIDATES : detects
  PROFILING_CYCLES ||--o| PROFILING_EVIDENCE_SNAPSHOTS : freezes
  PROFILING_CYCLES ||--o{ OFFICIAL_POPULATION_SNAPSHOTS : compares
  PROFILING_SUBMISSIONS ||--o{ PROFILING_EVENTS : audits

%% Canonical Phase 1 relationships. Stable Household and Resident identities are
%% separate from immutable submission/version records. Legacy household_profiles
%% is intentionally excluded from approved profiling and evidence totals.
